mongo_parser.go
// Code generated from mongo.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // mongo
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type mongoParser struct {
	*antlr.BaseParser
}

var MongoParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func mongoParserInit() {
	staticData := &MongoParserStaticData
	staticData.LiteralNames = []string{
		"", "'('", "')'", "'{'", "','", "'}'", "'['", "']'", "':'", "", "",
		"", "'null'", "", "", "", "", "';'", "'.'", "'db'", "'\\n'", "'\\r\\n'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "SingleLineComment", "MultiLineComment",
		"StringLiteral", "NullLiteral", "BooleanLiteral", "NumericLiteral",
		"DecimalLiteral", "LineTerminator", "SEMICOLON", "DOT", "DB", "LF",
		"CRLF", "STRING_LITERAL", "DOUBLE_QUOTED_STRING_LITERAL", "SINGLE_QUOTED_STRING_LITERAL",
		"WHITESPACE",
	}
	staticData.RuleNames = []string{
		"mongoCommands", "commands", "command", "emptyCommand", "collection",
		"functionCall", "arguments", "argumentList", "objectLiteral", "arrayLiteral",
		"elementList", "propertyNameAndValueList", "propertyAssignment", "propertyValue",
		"literal", "propertyName", "comment",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// mongoParserInit initializes any static state used to implement mongoParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewmongoParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func MongoParserInit() {
	staticData := &MongoParserStaticData
	staticData.once.Do(mongoParserInit)
}

// NewmongoParser produces a new parser instance for the optional input antlr.TokenStream.
func NewmongoParser(input antlr.TokenStream) *mongoParser {
	MongoParserInit()
	this := new(mongoParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &MongoParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "mongo.g4"

	return this
}

// mongoParser tokens.
const (
	mongoParserEOF                          = antlr.TokenEOF
	mongoParserT__0                         = 1
	mongoParserT__1                         = 2
	mongoParserT__2                         = 3
	mongoParserT__3                         = 4
	mongoParserT__4                         = 5
	mongoParserT__5                         = 6
	mongoParserT__6                         = 7
	mongoParserT__7                         = 8
	mongoParserSingleLineComment            = 9
	mongoParserMultiLineComment             = 10
	mongoParserStringLiteral                = 11
	mongoParserNullLiteral                  = 12
	mongoParserBooleanLiteral               = 13
	mongoParserNumericLiteral               = 14
	mongoParserDecimalLiteral               = 15
	mongoParserLineTerminator               = 16
	mongoParserSEMICOLON                    = 17
	mongoParserDOT                          = 18
	mongoParserDB                           = 19
	mongoParserLF                           = 20
	mongoParserCRLF                         = 21
	mongoParserSTRING_LITERAL               = 22
	mongoParserDOUBLE_QUOTED_STRING_LITERAL = 23
	mongoParserSINGLE_QUOTED_STRING_LITERAL = 24
	mongoParserWHITESPACE                   = 25
)

// mongoParser rules.
const (
	mongoParserRULE_mongoCommands            = 0
	mongoParserRULE_commands                 = 1
	mongoParserRULE_command                  = 2
	mongoParserRULE_emptyCommand             = 3
	mongoParserRULE_collection               = 4
	mongoParserRULE_functionCall             = 5
	mongoParserRULE_arguments                = 6
	mongoParserRULE_argumentList             = 7
	mongoParserRULE_objectLiteral            = 8
	mongoParserRULE_arrayLiteral             = 9
	mongoParserRULE_elementList              = 10
	mongoParserRULE_propertyNameAndValueList = 11
	mongoParserRULE_propertyAssignment       = 12
	mongoParserRULE_propertyValue            = 13
	mongoParserRULE_literal                  = 14
	mongoParserRULE_propertyName             = 15
	mongoParserRULE_comment                  = 16
)

// IMongoCommandsContext is an interface to support dynamic dispatch.
type IMongoCommandsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Commands() ICommandsContext
	EOF() antlr.TerminalNode

	// IsMongoCommandsContext differentiates from other interfaces.
	IsMongoCommandsContext()
}

type MongoCommandsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMongoCommandsContext() *MongoCommandsContext {
	var p = new(MongoCommandsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = mongoParserRULE_mongoCommands
	return p
}

func InitEmptyMongoCommandsContext(p *MongoCommandsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = mongoParserRULE_mongoCommands
}

func (*MongoCommandsContext) IsMongoCommandsContext() {}

func NewMongoCommandsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MongoCommandsContext {
	var p = new(MongoCommandsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = mongoParserRULE_mongoCommands

	return p
}

func (s *MongoCommandsContext) GetParser() antlr.Parser { return s.parser }

func (s *MongoCommandsContext) Commands() ICommandsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommandsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommandsContext)
}

func (s *MongoCommandsContext) EOF() antlr.TerminalNode {
	return s.GetToken(mongoParserEOF, 0)
}

func (s *MongoCommandsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MongoCommandsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MongoCommandsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(mongoListener); ok {
		listenerT.EnterMongoCommands(s)
	}
}

func (s *MongoCommandsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(mongoListener); ok {
		listenerT.ExitMongoCommands(s)
	}
}

func (s *MongoCommandsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case mongoVisitor:
		return t.VisitMongoCommands(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *mongoParser) MongoCommands() (localctx IMongoCommandsContext) {
	localctx = NewMongoCommandsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, mongoParserRULE_mongoCommands)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(34)
		p.Commands()
	}
	{
		p.SetState(35)
		p.Match(mongoParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICommandsContext is an interface to support dynamic dispatch.
type ICommandsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllCommand() []ICommandContext
	Command(i int) ICommandContext
	AllEmptyCommand() []IEmptyCommandContext
	EmptyCommand(i int) IEmptyCommandContext
	AllComment() []ICommentContext
	Comment(i int) ICommentContext

	// IsCommandsContext differentiates from other interfaces.
	IsCommandsContext()
}

type CommandsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCommandsContext() *CommandsContext {
	var p = new(CommandsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = mongoParserRULE_commands
	return p
}

func InitEmptyCommandsContext(p *CommandsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = mongoParserRULE_commands
}

func (*CommandsContext) IsCommandsContext() {}

func NewCommandsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommandsContext {
	var p = new(CommandsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = mongoParserRULE_commands

	return p
}

func (s *CommandsContext) GetParser() antlr.Parser { return s.parser }

func (s *CommandsContext) AllCommand() []ICommandContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICommandContext); ok {
			len++
		}
	}

	tst := make([]ICommandContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICommandContext); ok {
			tst[i] = t.(ICommandContext)
			i++
		}
	}

	return tst
}

func (s *CommandsContext) Command(i int) ICommandContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommandContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommandContext)
}

func (s *CommandsContext) AllEmptyCommand() []IEmptyCommandContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IEmptyCommandContext); ok {
			len++
		}
	}

	tst := make([]IEmptyCommandContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IEmptyCommandContext); ok {
			tst[i] = t.(IEmptyCommandContext)
			i++
		}
	}

	return tst
}

func (s *CommandsContext) EmptyCommand(i int) IEmptyCommandContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEmptyCommandContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEmptyCommandContext)
}

func (s *CommandsContext) AllComment() []ICommentContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICommentContext); ok {
			len++
		}
	}

	tst := make([]ICommentContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICommentContext); ok {
			tst[i] = t.(ICommentContext)
			i++
		}
	}

	return tst
}

func (s *CommandsContext) Comment(i int) ICommentContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommentContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommentContext)
}

func (s *CommandsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommandsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CommandsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(mongoListener); ok {
		listenerT.EnterCommands(s)
	}
}

func (s *CommandsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(mongoListener); ok {
		listenerT.ExitCommands(s)
	}
}

func (s *CommandsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case mongoVisitor:
		return t.VisitCommands(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *mongoParser) Commands() (localctx ICommandsContext) {
	localctx = NewCommandsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, mongoParserRULE_commands)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(40)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&656896) != 0) {
		p.SetState(40)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case mongoParserDB:
			{
				p.SetState(37)
				p.Command()
			}

		case mongoParserSEMICOLON:
			{
				p.SetState(38)
				p.EmptyCommand()
			}

		case mongoParserSingleLineComment, mongoParserMultiLineComment:
			{
				p.SetState(39)
				p.Comment()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(42)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICommandContext is an interface to support dynamic dispatch.
type ICommandContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DB() antlr.TerminalNode
	AllDOT() []antlr.TerminalNode
	DOT(i int) antlr.TerminalNode
	FunctionCall() IFunctionCallContext
	SEMICOLON() antlr.TerminalNode
	Collection() ICollectionContext

	// IsCommandContext differentiates from other interfaces.
	IsCommandContext()
}

type CommandContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCommandContext() *CommandContext {
	var p = new(CommandContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = mongoParserRULE_command
	return p
}

func InitEmptyCommandContext(p *CommandContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = mongoParserRULE_command
}

func (*CommandContext) IsCommandContext() {}

func NewCommandContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommandContext {
	var p = new(CommandContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = mongoParserRULE_command

	return p
}

func (s *CommandContext) GetParser() antlr.Parser { return s.parser }

func (s *CommandContext) DB() antlr.TerminalNode {
	return s.GetToken(mongoParserDB, 0)
}

func (s *CommandContext) AllDOT() []antlr.TerminalNode {
	return s.GetTokens(mongoParserDOT)
}

func (s *CommandContext) DOT(i int) antlr.TerminalNode {
	return s.GetToken(mongoParserDOT, i)
}

func (s *CommandContext) FunctionCall() IFunctionCallContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionCallContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionCallContext)
}

func (s *CommandContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(mongoParserSEMICOLON, 0)
}

func (s *CommandContext) Collection() ICollectionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICollectionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICollectionContext)
}

func (s *CommandContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommandContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CommandContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(mongoListener); ok {
		listenerT.EnterCommand(s)
	}
}

func (s *CommandContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(mongoListener); ok {
		listenerT.ExitCommand(s)
	}
}

func (s *CommandContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case mongoVisitor:
		return t.VisitCommand(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *mongoParser) Command() (localctx ICommandContext) {
	localctx = NewCommandContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, mongoParserRULE_command)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.Match(mongoParserDB)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(45)
		p.Match(mongoParserDOT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(51)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		{
			p.SetState(46)
			p.FunctionCall()
		}

	case 2:
		{
			p.SetState(47)
			p.Collection()
		}
		{
			p.SetState(48)
			p.Match(mongoParserDOT)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(49)
			p.FunctionCall()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(53)
			p.Match(mongoParserSEMICOLON)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IEmptyCommandContext is an interface to support dynamic dispatch.
type IEmptyCommandContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SEMICOLON() antlr.TerminalNode

	// IsEmptyCommandContext differentiates from other interfaces.
	IsEmptyCommandContext()
}

type EmptyCommandContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEmptyCommandContext() *EmptyCommandContext {
	var p = new(EmptyCommandContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = mongoParserRULE_emptyCommand
	return p
}

func InitEmptyEmptyCommandContext(p *EmptyCommandContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = mongoParserRULE_emptyCommand
}

func (*EmptyCommandContext) IsEmptyCommandContext() {}

func (s *EmptyCommandContext) GetParser() antlr.Parser { return s.parser }

func (s *EmptyCommandContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(mongoParserSEMICOLON, 0)
}

func (s *EmptyCommandContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EmptyCommandContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EmptyCommandContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(mongoListener); ok {
		listenerT.EnterEmptyCommand(s)
	}
}

func (s *EmptyCommandContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(mongoListener); ok {
		listenerT.ExitEmptyCommand(s)
	}
}

func (s *EmptyCommandContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case mongoVisitor:
		return t.VisitEmptyCommand(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *mongoParser) EmptyCommand() (localctx IEmptyCommandContext) {
	p.EnterRule(localctx, 6, mongoParserRULE_emptyCommand)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)
		p.Match(mongoParserSEMICOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICollectionContext is an interface to support dynamic dispatch.
type ICollectionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	STRING_LITERAL() antlr.TerminalNode

	// IsCollectionContext differentiates from other interfaces.
	IsCollectionContext()
}

type CollectionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCollectionContext() *CollectionContext {
	var p = new(CollectionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = mongoParserRULE_collection
	return p
}

func InitEmptyCollectionContext(p *CollectionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = mongoParserRULE_collection
}

func (*CollectionContext) IsCollectionContext() {}

func NewCollectionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CollectionContext {
	var p = new(CollectionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = mongoParserRULE_collection

	return p
}

func (s *CollectionContext) GetParser() antlr.Parser { return s.parser }

func (s *CollectionContext) STRING_LITERAL() antlr.TerminalNode {
	return s.GetToken(mongoParserSTRING_LITERAL, 0)
}

func (s *CollectionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CollectionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CollectionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(mongoListener); ok {
		listenerT.EnterCollection(s)
	}
}

func (s *CollectionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(mongoListener); ok {
		listenerT.ExitCollection(s)
	}
}

func (s *CollectionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case mongoVisitor:
		return t.VisitCollection(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *mongoParser) Collection() (localctx ICollectionContext) {
	localctx = NewCollectionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, mongoParserRULE_collection)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(58)
		p.Match(mongoParserSTRING_LITERAL)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFunctionCallContext is an interface to support dynamic dispatch.
type IFunctionCallContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetFUNCTION_NAME returns the FUNCTION_NAME token.
	GetFUNCTION_NAME() antlr.Token

	// SetFUNCTION_NAME sets the FUNCTION_NAME token.
	SetFUNCTION_NAME(antlr.Token)

	// Getter signatures
	Arguments() IArgumentsContext
	STRING_LITERAL() antlr.TerminalNode

	// IsFunctionCallContext differentiates from other interfaces.
	IsFunctionCallContext()
}

type FunctionCallContext struct {
	antlr.BaseParserRuleContext
	parser        antlr.Parser
	FUNCTION_NAME antlr.Token
}

func NewEmptyFunctionCallContext() *FunctionCallContext {
	var p = new(FunctionCallContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = mongoParserRULE_functionCall
	return p
}

func InitEmptyFunctionCallContext(p *FunctionCallContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = mongoParserRULE_functionCall
}

func (*FunctionCallContext) IsFunctionCallContext() {}

func NewFunctionCallContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FunctionCallContext {
	var p = new(FunctionCallContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = mongoParserRULE_functionCall

	return p
}

func (s *FunctionCallContext) GetParser() antlr.Parser { return s.parser }

func (s *FunctionCallContext) GetFUNCTION_NAME() antlr.Token { return s.FUNCTION_NAME }

func (s *FunctionCallContext) SetFUNCTION_NAME(v antlr.Token) { s.FUNCTION_NAME = v }

func (s *FunctionCallContext) Arguments() IArgumentsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IArgumentsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IArgumentsContext)
}

func (s *FunctionCallContext) STRING_LITERAL() antlr.TerminalNode {
	return s.GetToken(mongoParserSTRING_LITERAL, 0)
}

func (s *FunctionCallContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunctionCallContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FunctionCallContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(mongoListener); ok {
		listenerT.EnterFunctionCall(s)
	}
}

func (s *FunctionCallContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(mongoListener); ok {
		listenerT.ExitFunctionCall(s)
	}
}

func (s *FunctionCallContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case mongoVisitor:
		return t.VisitFunctionCall(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *mongoParser) FunctionCall() (localctx IFunctionCallContext) {
	localctx = NewFunctionCallContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, mongoParserRULE_functionCall)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(60)

		var _m = p.Match(mongoParserSTRING_LITERAL)

		localctx.(*FunctionCallContext).FUNCTION_NAME = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(61)
		p.Arguments()
	}
